@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix bug #1833943: Buffer overflow in item power calculation.
+ include/define.h: MAX_WEAPON_ITEM_POWER set to 100.
+ server/gods.c: make god refuse to enchant an already powerful item.
+ types/weapon_improver/weapon_improver.c: change enchant logic to not enchant already powerful items.
+Nicolas Weeger 2007-12-01
+
 Fix bugs #825265: Broken container images and #799392: 2.0 server mat container = chest.
  server/apply.c: store custom container image at container opening, and restore it later.
 Nicolas Weeger 2007-12-01
